--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "algorithm"
   ],
   "dependencies": {
-    "babel-core": "^6.24.0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-preset-es2015": "^6.24.0",
     "lodash": "^4.17.4",
     "sbd": "^1.0.12"
