--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "algorithm"
   ],
   "dependencies": {
-    "babel-core": "7.0.0-bridge.0",
-    "babel-preset-es2015": "^6.24.0",
     "lodash": "^4.17.4",
-    "sbd": "^1.0.12"
+    "sbd": "^1.0.16"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.6.0",
     "mocha": "^3.2.0",
     "should": "^11.2.1"
   },
